--- a/mystyle.css
+++ b/mystyle.css
@@ -15,20 +15,22 @@ h1 {
 
 }
 
-a.button, a:link, a:visited {
-    font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
-    font-size: 12px;
-    background-color: beige;
-    color: sienna;
-    padding-top: 5px;
-    padding-right: 5px;
-    padding-left: 5px;
-    padding-bottom: 5px;
-    display: inline-block;
+
+
+nav {
+    margin-top: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-left: auto;
     text-align: center;
 }
-
-a:hover, a:active {
-    background-color: gold;
-    text-align: center;
+button {
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    margin-top: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    margin-left: 5px;
 }
